--- a/app/views/carts/coupon_error.js.erb
+++ b/app/views/carts/coupon_error.js.erb
@@ -1,5 +1,7 @@
 y=document.getElementById("contentErrorCoupon");
 y.innerHTML = "";
 y.append("<%= escape_javascript(@errorCoupon[0])%>");
+y.className += "failed";
+
 
 
