--- a/app/views/admin/new_discount_code.html.erb
+++ b/app/views/admin/new_discount_code.html.erb
@@ -32,10 +32,17 @@
                     <div class="contact_form_container">
                         <%= form_for @discount_code, url: {action: "create_discount_code"} do |f| %>
                         <div class="row">
-                            <div class="col-xl-4">
+                            <div class="col-6">
                                 <!-- Name -->
                                 <label for="contact_name">Code</label>
                                 <%= f.text_field :code, class: "contact_input" %>
+                            </div>
+                            <div class="col-6">
+                                <!-- Name -->
+                                <label for="contact_name">Montant de la réduction</label>
+                                <div class="select_quantity_container_admin">
+                                    <%= f.number_field(:discount, step: 1, max: 100) %>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
