--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,5 +30,7 @@
  *= require responsive
  *= require animate.min.css
  *= require example4.css
+ *= require easy-autocomplete
+ *= require easy-autocomplete.themes
  */
 
