--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,97 +1,5 @@
-<!-- Home -->
-<div class="home_contact">
-    <div class="home_container_contact">
-        <div class="home_background_contact" style="background-image:url(<%= asset_path 'images/contact.jpg'%>)"></div>
-        <div class="home_content_container_contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <div class="home_content_contact">
-                            <div class="breadcrumbs_contact">
-                                <ul>
-                                    <li><a href="/">Home</a></li>
-                                    <li>Liste des marques</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Products -->
-
-<div class="products">
-    <div class="container">
-        <% if admin_or_webmaster == true %>
-            <div class="row">
-                <div class="button cart_button"><a href="/brands/new">Ajouter une marque</a></div>
-            </div>
-        <% end %>
-        <div class="row">
-            <div class="col">
-
-                <!-- Product Sorting -->
-                <div class="sorting_bar d-flex flex-md-row flex-column align-items-md-center justify-content-md-start">
-                    <% if @brands.length > 1 %>
-                    <div class="results"><span>
-                            <%= @brands.length %></span> résultats</div>
-                    <% else %>
-                    <div class="results"><span>
-                            <%= @brands.length %></span> résultat</div>
-                    <% end %>
-                    <div class="sorting_container ml-md-auto">
-                        <div class="sorting">
-                            <ul class="item_sorting">
-                                <li>
-                                    <span class="sorting_text">Filtrer par</span>
-                                    <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                    <ul>
-                                        <li class="product_sorting_btn" data-isotope-option='{ "sortBy": "original-order" }'><span>Défault</span></li>
-                                        <li class="product_sorting_btn" data-isotope-option='{ "sortBy": "price" }'><span>Prix</span></li>
-                                        <li class="product_sorting_btn" data-isotope-option='{ "sortBy": "stars" }'><span>Nom</span></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-
-                <div class="product_grid">
-                    <% @brands.each do |brand| %>
-                    <!-- Product -->
-                    <div class="product products_show">
-                    <% if admin_or_webmaster ==true %>
-                        <div class="product_extra product_new"><a href="/brands/<%=brand.id%>/edit">Éditer</a></div>
-                        <div class="product_extra_right product_sale"><%= link_to "Supprimer", brand_path(brand.id), method: :delete %></div>
-                    <% end %>
-                        <% if brand.brand_picture.attachment != nil %>
-                        <div class="product_image">
-                            <%= image_tag brand.brand_picture %>
-                        </div>
-                        <% end %>
-
-                        <div class="product_content">
-                            <div class="product_title"><a href="/brands/all">
-                                    <%= brand.brand %></a></div>
-
-                        </div>
-                    </div>
-                    <% end %>
-                </div>
-                <div class="product_pagination">
-                    <ul>
-                        <li class="active"><a href="#">01.</a></li>
-                        <li><a href="#">02.</a></li>
-                        <li><a href="#">03.</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+<div class="container">
+    <div class="row">
+        <%= @brand.brand %>
     </div>
 </div>
