--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,8 +10,7 @@
                     <div class="footer_logo"><a href="#">Screen Shop</a></div>
                     <div class="copyright ml-auto mr-auto">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy; All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
-                        by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        Copyright &copy; All rights reserved | This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a>, website is made by <a href="https://howebsites.com">HoWebsites</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                     <div class="footer_social ml-lg-auto">
